Java 17 -> Java 8