@@ -6,6 +6,7 @@ import gs.mclo.api.response.insights.Problem;
 import gs.mclo.api.response.insights.Solution;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 public class KnownCrashReasonMessage {
     private static final Comparator<KnownCrashReasonMessage> CRASH_REASON_COMPARATOR = Comparator
@@ -54,7 +55,7 @@ public class KnownCrashReasonMessage {
 
     public static void addCodexMessage(Log log, Problem problem, String url) {
         int line = problem.getEntry().getLines()[0].getNumber();
-        String solutions = String.join("\n", Arrays.stream(problem.getSolutions()).map(Solution::getMessage).toList());
+        String solutions = String.join("\n", Arrays.stream(problem.getSolutions()).map(Solution::getMessage).collect(Collectors.toList()));
         String crashAssistantAnalysisOfCodex = LogAnalyser.analyseCodexMessage(problem.getMessage() + "\n" + solutions);
         String msg = LanguageProvider.get("warnings.codex")
                 .replaceAll("\\$PROBLEM\\$", problem.getMessage())
