@@ -3,10 +3,10 @@ package dev.kostromdan.mods.crash_assistant.app.logs_analyser.crash_reasons.code
 import dev.kostromdan.mods.crash_assistant.app.logs_analyser.KnownCrashReason;
 import dev.kostromdan.mods.crash_assistant.app.logs_analyser.LogAnalyser;
 
-import java.util.List;
+import java.util.Collections;
 
 public class CodexMessage extends KnownCrashReason {
     public CodexMessage(String message) {
-        super(LogAnalyser.CodexSupportedLogTypes, message, List.of());
+        super(LogAnalyser.CodexSupportedLogTypes, message, Collections.emptyList());
     }
 }
